--- a/packages/bins-app/package.json
+++ b/packages/bins-app/package.json
@@ -23,10 +23,12 @@
     "expo-notifications": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "graphql": "^15.3.0",
+    "luxon": "^2.4.0",
     "postcode-validator": "^3.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-router-dom": "^6.2.1",
     "react-router-native": "^6.2.1",
