--- a/packages/bins-graphql-schema/package.json
+++ b/packages/bins-graphql-schema/package.json
@@ -19,9 +19,12 @@
     "form-data": "^4.0.0",
     "graphql": "^15.3.0",
     "graphql-iso-date": "^3.6.1",
+    "mysql2": "^2.3.3",
     "node-fetch": "^2.6.7",
     "query-string": "^7.1.1",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "patch:type-graphql@npm:1.1.1#../../.yarn/patches/type-graphql-npm-1.1.1-82668f6e3f"
+    "type-graphql": "patch:type-graphql@npm:1.1.1#../../.yarn/patches/type-graphql-npm-1.1.1-82668f6e3f",
+    "typeorm": "^0.3.6",
+    "typeorm-typedi-extensions": "^0.4.1"
   }
 }
