--- a/packages/bins-graphql-schema/package.json
+++ b/packages/bins-graphql-schema/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@joshbalfour/canterbury-api": "workspace:^",
     "class-validator": "^0.13.2",
+    "expo-server-sdk": "^3.6.0",
     "fetch-cookie": "^2.0.3",
     "form-data": "^4.0.0",
     "graphql": "^15.3.0",
