--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@
 
 # Swap the comments on the following lines if you don't wish to use zero-installs
 # Documentation here: https://yarnpkg.com/features/zero-installs
-!/.yarn/cache
+!/.yarn/cache4
 #/.pnp.*
 node_modules
-
+56
 dist
+tmp
