--- a/packages/bins-app/package.json
+++ b/packages/bins-app/package.json
@@ -16,8 +16,7 @@
     "@expo-google-fonts/poppins": "^0.2.2",
     "@joshbalfour/bins-graphql-schema": "workspace:^",
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-picker/picker": "^2.4.1",
+    "@react-native-picker/picker": "2.2.1",
     "expo": "~44.0.0",
     "expo-font": "^10.0.5",
     "expo-notifications": "~0.14.0",
