--- a/packages/bins-app/package.json
+++ b/packages/bins-app/package.json
@@ -16,17 +16,19 @@
     "@expo-google-fonts/poppins": "^0.2.2",
     "@joshbalfour/bins-graphql-schema": "workspace:^",
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-picker/picker": "2.2.1",
+    "@react-native-picker/picker": "2.3.0",
+    "dayjs": "^1.11.3",
     "expo": "~44.0.0",
     "expo-font": "^10.0.5",
+    "expo-navigation-bar": "~1.1.1",
     "expo-notifications": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "graphql": "^15.3.0",
-    "luxon": "^2.4.0",
     "postcode-validator": "^3.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-router-dom": "^6.2.1",
