--- a/packages/bins-graphql-schema/package.json
+++ b/packages/bins-graphql-schema/package.json
@@ -22,6 +22,7 @@
     "graphql-iso-date": "^3.6.1",
     "mysql2": "^2.3.3",
     "node-fetch": "^2.6.7",
+    "postcode": "^5.1.0",
     "query-string": "^7.1.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "patch:type-graphql@npm:1.1.1#../../.yarn/patches/type-graphql-npm-1.1.1-82668f6e3f",
