--- a/packages/bins-app/package.json
+++ b/packages/bins-app/package.json
@@ -23,6 +23,7 @@
     "expo-navigation-bar": "~1.1.1",
     "expo-notifications": "~0.14.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "graphql": "^15.3.0",
     "postcode-validator": "^3.7.0",
     "react": "17.0.1",
