--- a/packages/bins-app/package.json
+++ b/packages/bins-app/package.json
@@ -41,6 +41,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "expo-cli": "5.4.10",
     "expo-yarn-workspaces": "^1.7.0",
     "path": "^0.12.7",
     "typescript": "~4.3.5"
