--- a/packages/bins-app/package.json
+++ b/packages/bins-app/package.json
@@ -8,32 +8,38 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "build:web": "expo build:web"
+    "build:web": "expo build:web",
+    "publish": "source .env && expo publish"
   },
   "postinstall": "expo-yarn-workspaces",
   "dependencies": {
     "@apollo/client": "^3.6.8",
     "@expo-google-fonts/poppins": "^0.2.2",
     "@joshbalfour/bins-graphql-schema": "workspace:^",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-picker/picker": "2.3.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-picker/picker": "2.4.0",
+    "@sentry/react-native": "^3.4.3",
     "dayjs": "^1.11.3",
-    "expo": "~44.0.0",
+    "expo": "~45.0.0",
+    "expo-application": "~4.1.0",
+    "expo-constants": "~13.1.1",
+    "expo-device": "~4.2.0",
     "expo-font": "^10.0.5",
-    "expo-navigation-bar": "~1.1.1",
-    "expo-notifications": "~0.14.0",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.7",
+    "expo-navigation-bar": "~1.2.0",
+    "expo-notifications": "~0.15.3",
+    "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
     "graphql": "^15.3.0",
     "postcode-validator": "^3.7.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-markdown-display": "^7.0.0-alpha.2",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
+    "react-native-svg": "12.3.0",
+    "react-native-web": "0.17.7",
     "react-router-dom": "^6.2.1",
     "react-router-native": "^6.2.1",
+    "sentry-expo": "^4.0.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -41,7 +47,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
-    "expo-cli": "5.4.10",
+    "expo-cli": "5.4.11",
     "expo-yarn-workspaces": "^1.7.0",
     "path": "^0.12.7",
     "typescript": "~4.3.5"
