--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 !/.yarn/plugins
 !/.yarn/releases
 !/.yarn/sdks
-!/.yarn/cache
+# !/.yarn/cache
 
 # Swap the comments on the following lines if you don't wish to use zero-installs
 # Documentation here: https://yarnpkg.com/features/zero-installs
