--- a/packages/bins-app/package.json
+++ b/packages/bins-app/package.json
@@ -16,6 +16,7 @@
     "@apollo/client": "^3.6.8",
     "@expo-google-fonts/poppins": "^0.2.2",
     "@joshbalfour/bins-graphql-schema": "workspace:^",
+    "@joshbalfour/bins-types": "workspace:^",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-picker/picker": "2.4.0",
     "@sentry/react-native": "^3.4.3",
