--- a/packages/bins-graphql-schema/package.json
+++ b/packages/bins-graphql-schema/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@joshbalfour/basingstoke-api": "workspace:^",
     "@joshbalfour/bins-types": "workspace:^",
+    "@joshbalfour/birmingham-api": "workspace:^",
     "@joshbalfour/canterbury-api": "workspace:^",
     "class-validator": "^0.13.2",
     "expo-server-sdk": "^3.6.0",
