--- a/packages/bins-graphql-schema/package.json
+++ b/packages/bins-graphql-schema/package.json
@@ -16,7 +16,9 @@
     "@joshbalfour/basingstoke-api": "workspace:^",
     "@joshbalfour/bins-types": "workspace:^",
     "@joshbalfour/birmingham-api": "workspace:^",
+    "@joshbalfour/bournemouth-api": "workspace:^",
     "@joshbalfour/canterbury-api": "workspace:^",
+    "@joshbalfour/southampton-api": "workspace:^",
     "class-validator": "^0.13.2",
     "expo-server-sdk": "^3.6.0",
     "fetch-cookie": "^2.0.3",
