--- a/packages/bins-app/package.json
+++ b/packages/bins-app/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "build:web": "expo build:web",
-    "publish": "expo publish"
+    "publish": "expo publish",
+    "prod:web": "expo build:web && serve -s build/web"
   },
   "postinstall": "expo-yarn-workspaces",
   "dependencies": {
@@ -51,6 +52,7 @@
     "expo-cli": "5.4.11",
     "expo-yarn-workspaces": "^1.7.0",
     "path": "^0.12.7",
+    "serve": "^13.0.2",
     "typescript": "~4.3.5"
   },
   "private": true
