--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - .:/src
     image: node:16-alpine
     working_dir: /src/packages/bins-app
-    command: "yarn prod:web"
+    command: "yarn web:prod"
     ports:
       - "4030:3000"
 
