--- a/packages/bins-app/app.json
+++ b/packages/bins-app/app.json
@@ -26,6 +26,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
+      "googleServicesFile": "./google-services.json",
       "package": "com.joshbalfour.bins",
       "versionCode": 5
     },
