--- a/packages/bins-app/app.json
+++ b/packages/bins-app/app.json
@@ -24,7 +24,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "backgroundColor": "#272337"
       },
       "googleServicesFile": "./google-services.json",
       "package": "com.joshbalfour.bins",
