--- a/packages/bins-graphql-schema/package.json
+++ b/packages/bins-graphql-schema/package.json
@@ -21,6 +21,7 @@
     "@joshbalfour/newcastle-api": "workspace:^",
     "@joshbalfour/reading-api": "workspace:^",
     "@joshbalfour/southampton-api": "workspace:^",
+    "@joshbalfour/wandsworth-api": "workspace:^",
     "class-validator": "^0.13.2",
     "expo-server-sdk": "^3.6.0",
     "fetch-cookie": "^2.0.3",
