--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,10 @@
 !/.yarn/plugins
 !/.yarn/releases
 !/.yarn/sdks
-# !/.yarn/cache
 
 # Swap the comments on the following lines if you don't wish to use zero-installs
 # Documentation here: https://yarnpkg.com/features/zero-installs
-!/.yarn/cache4
+# !/.yarn/cache4
 #/.pnp.*
 node_modules
 56
