--- a/.drone.yml
+++ b/.drone.yml
@@ -3,13 +3,39 @@ kind: pipeline
 name: default
 
 steps:
-  - name: docker
+  - name: graphql-server
     image: plugins/docker
     settings:
       username: josh
       password:
         from_secret: docker_pat
       repo: git.home.fa.gl/josh/bins
+      build_args: "APP_NAME=bins-graphql-server"
+      registry: git.home.fa.gl
+      tags: latest
+      custom_dns: 10.0.0.8
+
+  - name: worker
+    image: plugins/docker
+    settings:
+      username: josh
+      password:
+        from_secret: docker_pat
+      repo: git.home.fa.gl/josh/bins
+      build_args: "APP_NAME=bins-graphql-worker"
+      registry: git.home.fa.gl
+      tags: latest
+      custom_dns: 10.0.0.8
+
+  - name: website
+    image: plugins/docker
+    settings:
+      username: josh
+      password:
+        from_secret: docker_pat
+      repo: git.home.fa.gl/josh/bins
+      build_args: "APP_NAME=bins-app"
+      dockerfile: Dockerfile.web
       registry: git.home.fa.gl
       tags: latest
       custom_dns: 10.0.0.8
