--- a/.drone.yml
+++ b/.drone.yml
@@ -5,11 +5,12 @@ name: default
 steps:
   - name: graphql-server
     image: plugins/docker
+    depends_on: ["clone"]
     settings:
       username: josh
       password:
         from_secret: docker_pat
-      repo: git.home.fa.gl/josh/bins
+      repo: git.home.fa.gl/josh/bins-graphql-server
       build_args: "APP_NAME=bins-graphql-server"
       registry: git.home.fa.gl
       tags: latest
@@ -17,23 +18,25 @@ steps:
 
   - name: worker
     image: plugins/docker
+    depends_on: ["clone"]
     settings:
       username: josh
       password:
         from_secret: docker_pat
-      repo: git.home.fa.gl/josh/bins
-      build_args: "APP_NAME=bins-graphql-worker"
+      repo: git.home.fa.gl/josh/bins-worker
+      build_args: "APP_NAME=bins-worker"
       registry: git.home.fa.gl
       tags: latest
       custom_dns: 10.0.0.8
 
   - name: website
     image: plugins/docker
+    depends_on: ["clone"]
     settings:
       username: josh
       password:
         from_secret: docker_pat
-      repo: git.home.fa.gl/josh/bins
+      repo: git.home.fa.gl/josh/bins-website
       build_args: "APP_NAME=bins-app"
       dockerfile: Dockerfile.web
       registry: git.home.fa.gl
