--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -3,8 +3,11 @@ ARG APP_NAME
 
 WORKDIR /base
 COPY . ./
-RUN yarn install --immutable
-RUN cd packages/$APP_NAME && yarn build
+
+RUN yarn install --immutable \
+    && cd packages/$APP_NAME \
+    && yarn build \
+    && rm -rf ../../.yarn/cache
 
 FROM nginx:stable-alpine
 ARG APP_NAME
