--- a/packages/bins-worker/package.json
+++ b/packages/bins-worker/package.json
@@ -3,6 +3,7 @@
   "packageManager": "yarn@3.1.1",
   "scripts": {
     "start": "ts-node-dev src/index.ts",
+    "start:prod": "node dist",
     "build": "tsc"
   },
   "devDependencies": {
