--- a/.drone.yml
+++ b/.drone.yml
@@ -18,7 +18,7 @@ steps:
 
   - name: worker
     image: plugins/docker
-    depends_on: ["graphql-server"]
+    depends_on: ["clone"]
     settings:
       username: josh
       password:
