--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,4 +1,4 @@
-FROM node:16-alpine as build
+FROM node:19-alpine as build
 ARG APP_NAME
 
 WORKDIR /base
@@ -6,12 +6,13 @@ COPY . ./
 
 RUN yarn install --immutable \
     && cd packages/$APP_NAME \
+    && npm install -g sharp-cli \
     && yarn build \
     && rm -rf ../../.yarn/cache
 
 FROM nginx:stable-alpine
 ARG APP_NAME
-COPY --from=build /base/packages/$APP_NAME/build /usr/share/nginx/html
+COPY --from=build /base/packages/$APP_NAME/web-build /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
