--- a/kubes/graphql-server/ingress.yml
+++ b/kubes/graphql-server/ingress.yml
@@ -15,4 +15,4 @@ spec:
           service:
             name: bins-graphql-server
             port:
-              name: http
+              number: 80
