bundle with ts up (#3)
* bundle with ts up

* worker tsup

* update dockerfiles

* update yarn

* rookie error

* fix yarn lock file changes

* don't purge

* change folder name

* do yarn as first step

* temp

* try /drone/src

* add yarn cache folder :(

* no global cache

* add musl

* CMD not entrypoint

* Update Dockerfile

* updoot some packages (#4)

* updated web with new expo, updated graphql server

they renamed the build command...

package everything hopefully

shouldn't need to copy git history into stuff

* dont need no minimize yet

* need postgres

Co-authored-by: jmeyer <jmeyer@home.fa.gl>

Co-authored-by: jbalfour <jbalfour@home.fa.gl>
Co-authored-by: Sanguinaris <wieichdashasse@gmail.com>
Co-authored-by: jmeyer <jmeyer@home.fa.gl>

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,7 @@ steps:
     image: plugins/docker
     depends_on: ["clone"]
     settings:
+      purge: false
       username: josh
       password:
         from_secret: docker_pat
@@ -21,6 +22,7 @@ steps:
     image: plugins/docker
     depends_on: ["clone"]
     settings:
+      purge: false
       username: josh
       password:
         from_secret: docker_pat
@@ -35,6 +37,7 @@ steps:
     image: plugins/docker
     depends_on: ["clone"]
     settings:
+      purge: false
       username: josh
       password:
         from_secret: docker_pat
