--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "smartmeter",
-  "packageManager": "yarn@3.2.4",
+  "name": "bins",
+  "packageManager": "yarn@3.3.0",
   "private": true,
   "workspaces": [
     "packages/*"
