--- a/packages/bins-app/package.json
+++ b/packages/bins-app/package.json
@@ -8,50 +8,50 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider expo build:web",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider expo export:web",
     "publish": "expo publish"
   },
   "postinstall": "expo-yarn-workspaces",
   "dependencies": {
-    "@apollo/client": "^3.6.8",
+    "@apollo/client": "^3.7.2",
     "@expo-google-fonts/poppins": "^0.2.2",
     "@joshbalfour/bins-graphql-schema": "workspace:^",
     "@joshbalfour/bins-types": "workspace:^",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-picker/picker": "2.4.0",
-    "@sentry/react-native": "^3.4.3",
-    "dayjs": "^1.11.3",
-    "expo": "~45.0.0",
-    "expo-application": "~4.1.0",
-    "expo-constants": "~13.1.1",
-    "expo-device": "~4.2.0",
-    "expo-font": "^10.0.5",
-    "expo-navigation-bar": "~1.2.0",
-    "expo-notifications": "~0.15.4",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.4",
-    "graphql": "^15.3.0",
+    "@react-native-async-storage/async-storage": "~1.17.11",
+    "@react-native-picker/picker": "2.4.8",
+    "@sentry/react-native": "^4.9.0",
+    "dayjs": "^1.11.7",
+    "expo": "~47.0.8",
+    "expo-application": "~5.0.1",
+    "expo-constants": "~14.0.2",
+    "expo-device": "~5.0.0",
+    "expo-font": "^11.0.1",
+    "expo-navigation-bar": "~2.0.1",
+    "expo-notifications": "~0.17.0",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "graphql": "^16.6.0",
     "postcode-validator": "^3.7.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-markdown-display": "^7.0.0-alpha.2",
-    "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7",
-    "react-router-dom": "^6.2.1",
-    "react-router-native": "^6.2.1",
-    "sentry-expo": "^4.0.0",
-    "styled-components": "^5.3.3"
+    "react-native-svg": "13.4.0",
+    "react-native-web": "0.18.10",
+    "react-router-dom": "^6.4.5",
+    "react-router-native": "^6.4.5",
+    "sentry-expo": "^6.0.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@babel/core": "^7.20.5",
+    "@types/react": "~18.0.26",
+    "@types/react-native": "~0.70.8",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
-    "expo-cli": "6.0.6",
-    "expo-yarn-workspaces": "^1.7.0",
+    "expo-cli": "6.0.8",
+    "expo-yarn-workspaces": "^2.0.4",
     "path": "^0.12.7",
-    "serve": "^13.0.2",
+    "serve": "^14.1.2",
     "typescript": "~4.3.5"
   },
   "private": true
