--- a/packages/bins-graphql-server/package.json
+++ b/packages/bins-graphql-server/package.json
@@ -2,18 +2,18 @@
   "name": "@joshbalfour/bins-graphql-server",
   "packageManager": "yarn@3.1.1",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
+    "start": "tsup --watch --onSuccess 'node dist/index.js'",
     "start:prod": "node dist",
-    "build": "tsc"
+    "build": "tsup"
   },
   "devDependencies": {
-    "ts-node-dev": "^1.1.8",
+    "@swc/core": "^1.3.22",
+    "tsup": "^6.5.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@apollo/server": "^4.2.2",
     "@joshbalfour/bins-graphql-schema": "workspace:^",
-    "@joshbalfour/southwark-api": "workspace:^",
-    "apollo-server": "^3.6.2",
-    "graphql": "^15.3.0"
+    "graphql": "^16.6.0"
   }
 }
