--- a/packages/bins-worker/package.json
+++ b/packages/bins-worker/package.json
@@ -2,13 +2,14 @@
   "name": "@joshbalfour/bins-worker",
   "packageManager": "yarn@3.1.1",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
+    "start": "tsup --watch --onSuccess 'node dist/index.js'",
     "start:prod": "node dist",
-    "build": "tsc"
+    "build": "tsup"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.16",
     "@types/cron": "^2.0.0",
-    "ts-node-dev": "^1.1.8",
+    "tsup": "^6.4.0",
     "typescript": "^4.5.5"
   },
   "main": "src/index.ts",
