--- a/kubes/worker/deployment.yml
+++ b/kubes/worker/deployment.yml
@@ -16,3 +16,6 @@ spec:
       containers:
       - image: git.home.fa.gl/josh/bins-worker:latest
         name: bins-worker
+        envFrom:
+          - configMapRef:
+              name: bins-cm
