Fix/just use maria (#6)
* maria is gonna be easier...

made it work sans package cache

updates and now have package cache :(

oops shouldn't commit secrets

* fix uri

* also shouldn't have that there

* maybe fix kubes ingress config

Co-authored-by: jmeyer <jmeyer@home.fa.gl>

--- a/kubes/ingress.yml
+++ b/kubes/ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: bins-website-ingress
+  name: bins-graphql-server-ingress
   annotations:
     kubernetes.io/ingress.class: public
 spec:
@@ -9,6 +9,13 @@ spec:
   - host: bins.home.fa.gl
     http:
       paths:
+      - path: /api
+        pathType: Prefix
+        backend:
+          service:
+            name: bins-graphql-server
+            port:
+              number: 80
       - path: /
         pathType: Prefix
         backend:
