--- a/packages/bins-graphql-schema/package.json
+++ b/packages/bins-graphql-schema/package.json
@@ -7,8 +7,7 @@
   },
   "devDependencies": {
     "@types/graphql-iso-date": "^3.4.0",
-    "@types/node-fetch": "^2.6.1",
-    "ts-node-dev": "^1.1.8",
+    "@types/node-fetch": "^2.6.2",
     "typescript": "^4.5.5"
   },
   "main": "src/index.ts",
@@ -22,19 +21,19 @@
     "@joshbalfour/reading-api": "workspace:^",
     "@joshbalfour/southampton-api": "workspace:^",
     "@joshbalfour/wandsworth-api": "workspace:^",
-    "class-validator": "^0.13.2",
-    "expo-server-sdk": "^3.6.0",
-    "fetch-cookie": "^2.0.3",
+    "class-validator": "^0.14.0",
+    "expo-server-sdk": "^3.7.0",
+    "fetch-cookie": "^2.1.0",
     "form-data": "^4.0.0",
-    "graphql": "^15.3.0",
+    "graphql": "^16.6.0",
     "graphql-iso-date": "^3.6.1",
     "mysql2": "^2.3.3",
-    "node-fetch": "^2.6.7",
+    "node-fetch": "^3.3.0",
     "postcode": "^5.1.0",
-    "query-string": "^7.1.1",
+    "query-string": "^7.1.3",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "patch:type-graphql@npm:1.1.1#../../.yarn/patches/type-graphql-npm-1.1.1-82668f6e3f",
-    "typeorm": "^0.3.6",
+    "type-graphql": "next",
+    "typeorm": "^0.3.11",
     "typeorm-typedi-extensions": "^0.4.1"
   }
 }
