--- a/packages/bins-graphql-schema/package.json
+++ b/packages/bins-graphql-schema/package.json
@@ -20,6 +20,7 @@
     "@joshbalfour/newcastle-api": "workspace:^",
     "@joshbalfour/reading-api": "workspace:^",
     "@joshbalfour/southampton-api": "workspace:^",
+    "@joshbalfour/thanet-api": "workspace:^",
     "@joshbalfour/wandsworth-api": "workspace:^",
     "class-validator": "^0.14.0",
     "expo-server-sdk": "^3.7.0",
