--- a/packages/bins-graphql-schema/package.json
+++ b/packages/bins-graphql-schema/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@types/graphql-iso-date": "^3.4.0",
     "@types/node-fetch": "^2.6.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.5.5"
   },
   "main": "src/index.ts",
