--- a/packages/bins-app/package.json
+++ b/packages/bins-app/package.json
@@ -7,9 +7,10 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
+    "eject": "expo prebuild",
     "build": "NODE_OPTIONS=--openssl-legacy-provider expo export:web",
-    "publish": "expo publish"
+    "publish": "eas update --branch production --message 'Updating the app'",
+    "publish:native": "eas build --platform all"
   },
   "postinstall": "expo-yarn-workspaces",
   "dependencies": {
@@ -19,9 +20,8 @@
     "@joshbalfour/bins-types": "workspace:^",
     "@react-native-async-storage/async-storage": "~1.17.11",
     "@react-native-picker/picker": "2.4.8",
-    "@sentry/react-native": "^4.9.0",
     "dayjs": "^1.11.7",
-    "expo": "~47.0.8",
+    "expo": "~47.0.9",
     "expo-application": "~5.0.1",
     "expo-constants": "~14.0.2",
     "expo-device": "~5.0.0",
@@ -40,15 +40,15 @@
     "react-native-web": "0.18.10",
     "react-router-dom": "^6.4.5",
     "react-router-native": "^6.4.5",
-    "sentry-expo": "^6.0.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
+    "@expo/cli": "^0.4.10",
     "@types/react": "~18.0.26",
     "@types/react-native": "~0.70.8",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
-    "expo-cli": "6.0.8",
+    "eas-cli": "^3.1.1",
     "expo-yarn-workspaces": "^2.0.4",
     "path": "^0.12.7",
     "serve": "^14.1.2",
