upgrades people, upgrades

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,15 +4,15 @@ logFilters:
 
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-3.3.0.cjs
-
 supportedArchitectures:
-  libc:
-    - "musl"
-    - "current"
-  os:
-    - "linux"
-    - "current"
   cpu:
-    - "x64"
-    - "current"
+    - x64
+    - current
+  libc:
+    - musl
+    - current
+  os:
+    - linux
+    - current
+
+yarnPath: .yarn/releases/yarn-3.6.0.cjs
