--- a/packages/basingstoke-api/package.json
+++ b/packages/basingstoke-api/package.json
@@ -1,25 +1,19 @@
 {
   "name": "@joshbalfour/basingstoke-api",
-  "packageManager": "yarn@3.1.1",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
-    "build": "tsc",
+    "start": "tsup --watch --onSuccess 'node dist/index.js'",
+    "build": "tsup",
     "test": "mocha"
   },
   "main": "src/index.ts",
   "devDependencies": {
     "@types/mocha": "^9.1.1",
-    "@types/node-fetch": "^2.6.1",
-    "mocha": "^10.0.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.5"
+    "mocha": "^10.2.0",
+    "tsup": "^7.0.0",
+    "typescript": "^5.1.3"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.11",
-    "dayjs": "^1.11.3",
-    "fetch-cookie": "^2.0.3",
-    "form-data": "^4.0.0",
-    "node-fetch": "^2.6.7",
-    "query-string": "^7.1.1"
+    "cheerio": "^1.0.0-rc.12",
+    "dayjs": "^1.11.8"
   }
 }
