--- a/packages/bins-app/package.json
+++ b/packages/bins-app/package.json
@@ -14,45 +14,46 @@
   },
   "postinstall": "expo-yarn-workspaces",
   "dependencies": {
-    "@apollo/client": "^3.7.2",
-    "@expo-google-fonts/poppins": "^0.2.2",
+    "@apollo/client": "^3.7.16",
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@joshbalfour/bins-graphql-schema": "workspace:^",
     "@joshbalfour/bins-types": "workspace:^",
-    "@react-native-async-storage/async-storage": "~1.17.11",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-picker/picker": "2.4.8",
-    "dayjs": "^1.11.7",
-    "expo": "~47.0.9",
-    "expo-application": "~5.0.1",
-    "expo-constants": "~14.0.2",
-    "expo-device": "~5.0.0",
-    "expo-font": "^11.0.1",
-    "expo-navigation-bar": "~2.0.1",
-    "expo-notifications": "~0.17.0",
-    "expo-status-bar": "~1.4.2",
-    "expo-updates": "~0.15.6",
-    "graphql": "^16.6.0",
-    "postcode-validator": "^3.7.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "dayjs": "^1.11.8",
+    "expo": "~48.0.19",
+    "expo-application": "~5.1.1",
+    "expo-constants": "~14.2.1",
+    "expo-device": "~5.2.1",
+    "expo-font": "~11.1.1",
+    "expo-navigation-bar": "~2.1.1",
+    "expo-notifications": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
+    "graphql": "^16.7.1",
+    "postcode-validator": "^3.8.11",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
     "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-svg": "13.4.0",
-    "react-native-web": "0.18.10",
-    "react-router-dom": "^6.4.5",
-    "react-router-native": "^6.4.5",
-    "styled-components": "^5.3.6"
+    "react-native-web": "~0.18.10",
+    "react-router-dom": "^6.13.0",
+    "react-router-native": "^6.13.0",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
-    "@expo/cli": "^0.4.10",
-    "@types/react": "~18.0.26",
-    "@types/react-native": "~0.70.8",
+    "@babel/core": "^7.22.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@expo/cli": "^0.7.3",
+    "@types/react": "~18.0.27",
+    "@types/react-native": "~0.72.2",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
-    "eas-cli": "^3.1.1",
-    "expo-yarn-workspaces": "^2.0.4",
+    "eas-cli": "^3.14.0",
+    "expo-yarn-workspaces": "^2.1.0",
     "path": "^0.12.7",
-    "serve": "^14.1.2",
-    "typescript": "~4.3.5"
+    "serve": "^14.2.0",
+    "typescript": "~5.1.3"
   },
   "private": true
 }
