--- a/packages/bins-graphql-schema/package.json
+++ b/packages/bins-graphql-schema/package.json
@@ -1,15 +1,13 @@
 {
   "name": "@joshbalfour/bins-graphql-schema",
-  "packageManager": "yarn@3.1.1",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
-    "build": "tsc"
+    "start": "tsup --watch --onSuccess 'node dist/index.js'",
+    "build": "tsup",
+    "test": "mocha"
   },
   "devDependencies": {
     "@types/graphql-iso-date": "^3.4.0",
-    "@types/node-fetch": "^2.6.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.5.5"
+    "typescript": "^5.1.3"
   },
   "main": "src/index.ts",
   "dependencies": {
@@ -27,15 +25,13 @@
     "expo-server-sdk": "^3.7.0",
     "fetch-cookie": "^2.1.0",
     "form-data": "^4.0.0",
-    "graphql": "^16.6.0",
+    "graphql": "^16.7.1",
     "graphql-iso-date": "^3.6.1",
-    "mysql2": "^2.3.3",
-    "node-fetch": "^3.3.0",
+    "mysql2": "^3.4.0",
     "postcode": "^5.1.0",
-    "query-string": "^7.1.3",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "next",
-    "typeorm": "^0.3.11",
+    "typeorm": "^0.3.17",
     "typeorm-typedi-extensions": "^0.4.1"
   }
 }
