--- a/packages/bins-worker/package.json
+++ b/packages/bins-worker/package.json
@@ -7,15 +7,14 @@
     "build": "tsup"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.22",
-    "@types/cron": "^2.0.0",
-    "tsup": "^6.5.0",
-    "typescript": "^4.5.5"
+    "@swc/core": "^1.3.66",
+    "@types/cron": "^2.0.1",
+    "tsup": "^7.0.0",
+    "typescript": "^5.1.3"
   },
   "main": "src/index.ts",
   "dependencies": {
     "@joshbalfour/bins-graphql-schema": "workspace:^",
-    "cron": "^2.1.0",
-    "luxon": "^3.1.1"
+    "cron": "^2.3.1"
   }
 }
