--- a/packages/canterbury-api/package.json
+++ b/packages/canterbury-api/package.json
@@ -1,20 +1,16 @@
 {
   "name": "@joshbalfour/canterbury-api",
-  "packageManager": "yarn@3.1.1",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
-    "build": "tsc"
+    "start": "tsup --watch --onSuccess 'node dist/index.js'",
+    "build": "tsup",
+    "test": "mocha"
   },
   "main": "src/index.ts",
   "devDependencies": {
-    "@types/node-fetch": "^2.6.1",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.5"
+    "tsup": "^7.0.0",
+    "typescript": "^5.1.3"
   },
   "dependencies": {
-    "fetch-cookie": "^2.0.3",
-    "form-data": "^4.0.0",
-    "node-fetch": "^2.6.7",
-    "query-string": "^7.1.1"
+    "dayjs": "^1.11.8"
   }
 }
