--- a/packages/ealing-api/package.json
+++ b/packages/ealing-api/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@joshbalfour/ealing-api",
-  "packageManager": "yarn@3.1.1",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
-    "build": "tsc",
+    "start": "tsup --watch --onSuccess 'node dist/index.js'",
+    "build": "tsup",
     "test": "mocha"
   },
   "main": "src/index.ts",
   "devDependencies": {
-    "@types/node-fetch": "^2.6.1",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.5"
+    "tsup": "^7.0.0",
+    "typescript": "^5.1.3"
   },
   "dependencies": {
-    "node-fetch": "^2.6.7"
+    "dayjs": "^1.11.8",
+    "fetch-cookie": "^2.1.0",
+    "form-data": "^4.0.0"
   }
 }
