--- a/packages/southampton-api/package.json
+++ b/packages/southampton-api/package.json
@@ -1,20 +1,18 @@
 {
   "name": "@joshbalfour/southampton-api",
-  "packageManager": "yarn@3.1.1",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
-    "build": "tsc",
+    "start": "tsup --watch --onSuccess 'node dist/index.js'",
+    "build": "tsup",
     "test": "mocha"
   },
   "main": "src/index.ts",
   "devDependencies": {
-    "@types/node-fetch": "^2.6.1",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.5"
+    "tsup": "^7.0.0",
+    "typescript": "^5.1.3"
   },
   "dependencies": {
+    "dayjs": "^1.11.8",
     "form-data": "^4.0.0",
-    "node-fetch": "^2.6.7",
-    "node-ical": "^0.15.1"
+    "node-ical": "^0.16.1"
   }
 }
