--- a/packages/bins-worker/package.json
+++ b/packages/bins-worker/package.json
@@ -8,13 +8,11 @@
   },
   "devDependencies": {
     "@swc/core": "^1.3.66",
-    "@types/cron": "^2.0.1",
     "tsup": "^7.0.0",
     "typescript": "^5.1.3"
   },
   "main": "src/index.ts",
   "dependencies": {
-    "@joshbalfour/bins-graphql-schema": "workspace:^",
-    "cron": "^2.3.1"
+    "@joshbalfour/bins-graphql-schema": "workspace:^"
   }
 }
