--- a/kubes/worker/cron.yml
+++ b/kubes/worker/cron.yml
@@ -15,4 +15,6 @@ spec:
             envFrom:
               - configMapRef:
                   name: bins-cm
+              - secretRef:
+                  name: db-secret
           restartPolicy: Never
