--- a/packages/bins-app/package.json
+++ b/packages/bins-app/package.json
@@ -34,16 +34,16 @@
     "postcode-validator": "^3.8.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.3",
     "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.10",
+    "react-native-web": "~0.18.11",
     "react-router-dom": "^6.13.0",
     "react-router-native": "^6.13.0",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.5",
+    "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@expo/cli": "^0.7.3",
     "@types/react": "~18.0.27",
@@ -53,7 +53,7 @@
     "expo-yarn-workspaces": "^2.1.0",
     "path": "^0.12.7",
     "serve": "^14.2.0",
-    "typescript": "~5.1.3"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
