fix package versions

--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "private": true,
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "resolutions": {
+    "@expo/prebuild-config@5.0.7": "~6.0.0",
+    "@expo/config-plugins": "~6.0.0"
+  }
 }
