--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,12 @@
 
 # Swap the comments on the following lines if you don't wish to use zero-installs
 # Documentation here: https://yarnpkg.com/features/zero-installs
-!/.yarn/cache
-#/.pnp.*
+#!/.yarn/cache
+/.pnp.*
 node_modules
 56
 dist
 tmp
 .DS_Store
+.env
+!env.example
