--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -6,7 +6,7 @@ COPY . ./
 
 RUN npm install -g sharp-cli
 
-RUN yarn install --immutable --immutable-cache \
+RUN yarn install --immutable \
     && cd packages/$APP_NAME \
     && yarn build \
     && mkdir /app \
