updates, navigate seems not working properly

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,7 @@
+compressionLevel: mixed
+
+enableGlobalCache: false
+
 logFilters:
   - code: YN0013
     level: discard
@@ -15,4 +19,4 @@ supportedArchitectures:
     - linux
     - current
 
-yarnPath: .yarn/releases/yarn-3.6.0.cjs
+yarnPath: .yarn/releases/yarn-4.0.0.cjs
