--- a/packages/basingstoke-api/package.json
+++ b/packages/basingstoke-api/package.json
@@ -7,13 +7,13 @@
   },
   "main": "src/index.ts",
   "devDependencies": {
-    "@types/mocha": "^10.0.3",
-    "mocha": "^10.2.0",
-    "tsup": "^7.2.0",
-    "typescript": "^5.2.2"
+    "@types/mocha": "^10.0.7",
+    "mocha": "^10.7.3",
+    "tsup": "^8.2.4",
+    "typescript": "^5.5.4"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "dayjs": "^1.11.10"
+    "cheerio": "^1.0.0",
+    "dayjs": "^1.11.12"
   }
 }
