--- a/packages/bins-app/package.json
+++ b/packages/bins-app/package.json
@@ -14,13 +14,13 @@
   },
   "postinstall": "expo-yarn-workspaces",
   "dependencies": {
-    "@apollo/client": "^3.8.6",
+    "@apollo/client": "^3.11.4",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@joshbalfour/bins-graphql-schema": "workspace:^",
     "@joshbalfour/bins-types": "workspace:^",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-picker/picker": "2.4.10",
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.12",
     "expo": "~49.0.16",
     "expo-application": "~5.3.0",
     "expo-constants": "~14.4.2",
@@ -30,20 +30,20 @@
     "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.16",
-    "graphql": "^16.8.1",
-    "postcode-validator": "^3.8.20",
+    "graphql": "^16.9.0",
+    "postcode-validator": "^3.8.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-markdown-display": "^7.0.0-alpha.2",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.9",
     "react-router-dom": "^6.17.0",
     "react-router-native": "^6.17.0",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
+    "@babel/core": "^7.25.2",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@expo/cli": "^0.10.14",
     "@types/react": "~18.2.31",
