--- a/packages/southwark-api/package.json
+++ b/packages/southwark-api/package.json
@@ -7,11 +7,11 @@
   },
   "main": "src/index.ts",
   "devDependencies": {
-    "tsup": "^7.2.0",
-    "typescript": "^5.2.2"
+    "tsup": "^8.2.4",
+    "typescript": "^5.5.4"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "dayjs": "^1.11.10"
+    "cheerio": "^1.0.0",
+    "dayjs": "^1.11.12"
   }
 }
