no minus me guess

--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -29,4 +29,4 @@ jobs:
           push: true
           tags: git2.home.fa.gl/boi/${{ matrix.package }}:latest
           build-args:
-          - APP_NAME: ${{ matrix.package }}
+            APP_NAME: ${{ matrix.package }}
