--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,4 +1,4 @@
-FROM node:21-alpine as build
+FROM node:22-alpine as build
 ARG APP_NAME
 
 WORKDIR /build
@@ -6,7 +6,8 @@ COPY . ./
 
 RUN npm install -g sharp-cli
 
-RUN yarn install --immutable \
+RUN corepack enable \
+    && yarn install --immutable \
     && cd packages/$APP_NAME \
     && yarn build \
     && mkdir /app \
