--- a/packages/bins-graphql-schema/package.json
+++ b/packages/bins-graphql-schema/package.json
@@ -27,10 +27,12 @@
     "form-data": "^4.0.0",
     "graphql": "^16.9.0",
     "graphql-iso-date": "^3.6.1",
+    "graphql-scalars": "^1.23.0",
     "mysql2": "^3.11.0",
     "postcode": "^5.1.0",
     "reflect-metadata": "^0.2.2",
     "type-graphql": "2.0.0-rc.2",
+    "typedi": "^0.10.0",
     "typeorm": "^0.3.20",
     "typeorm-typedi-extensions": "^0.4.1"
   }
