--- a/kubes/bins/templates/deployment-gql.yaml
+++ b/kubes/bins/templates/deployment-gql.yaml
@@ -29,3 +29,6 @@ spec:
             {{- toYaml .Values.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          envFrom:
+          - configMapRef:
+              name: {{ include "bins.fullname" . }}-configmap
