--- a/kubes/bins/values.yaml
+++ b/kubes/bins/values.yaml
@@ -1,6 +1,19 @@
 worker:
   image: git2.home.fa.gl/boi/bins-worker:latest
 
+timezone: Europe/London
+
+ingress:
+  enabled: false
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
+
 graphql:
   image: git2.home.fa.gl/josh/bins-graphql-server:latest
   replicaCount: 1
@@ -8,20 +21,11 @@ graphql:
     type: ClusterIP
     port: 4010
   ingress:
-    enabled: true
-    className: ""
-    annotations: {}
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
     hosts:
       - host: bins2.home.fa.gl
         paths:
           - path: /api
-            pathType: ImplementationSpecific
-    tls: []
-    #  - secretName: chart-example-tls
-    #    hosts:
-    #      - chart-example.local
+            pathType: Prefix
 
 website:
   image: git2.home.fa.gl/josh/bins-website:latest
@@ -30,20 +34,11 @@ website:
     type: ClusterIP
     port: 80
   ingress:
-    enabled: true
-    className: ""
-    annotations: {}
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
     hosts:
       - host: bins2.home.fa.gl
         paths:
           - path: /
             pathType: ImplementationSpecific
-    tls: []
-    #  - secretName: chart-example-tls
-    #    hosts:
-    #      - chart-example.local
 
 mariadb:
   deploy: true
